# sara_commun

./: .codeclimate.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  README.md  dependencies.rosinstall
ikcpp/: .cproject  .project
ikcpp/src/: ik_solver.cpp  main.cpp  manipulator.cpp  pugixml.cpp
map_laser/: filters.yaml  lfilter.launch  lfilter.launch~  package.xml
mecanum_controller/: CMakeLists.txt  mecanum_controller_plugins.xml  package.xml
mecanum_controller/include/: .wm_mecanum_controller.h.swp  wm_mecanum_controller.h
mecanum_controller/src/: mecanum_controller.cpp
moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
moveit_generated/config/: camera_sensor.yaml  fake_controllers.yaml  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  sara.srdf
moveit_generated/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  wm_move_group.launch  wm_move_group.launch~  wm_planning_context.launch  wm_planning_context.launch~  wm_sensor_manager.launch
pocketsphinx/demo/: robocup.dic~  robocup.lm~
pocketsphinx/launch/: robocup_r1.launch  robocup_r1.launch~  sara_vocab.launch
pocketsphinx/sara_vocab/: TextToAdd.txt~  sara_vocab.dic  sara_vocab.dic~  sara_vocab.launch~  sara_vocab.lm~  sara_vocab.log_pronounce~  sara_vocab.sent~  sara_vocab.vocab~
sara_commun/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
sara_commun/script/: sara_installer.bash  short-circuit_installer.bash  short-circuit_installer.bash~
sara_description/: CMakeLists.txt  model.config  package.xml
sara_description/config/: arm_marker.cpp  neckHead (copy).yaml  neckHead.yaml
sara_description/launch/: sara_description (copy).launch  sara_description.launch  sara_description_gazebo.launch  test_robotiq_c2_model.launch  urdf_rviz.launch
sara_description/meshes/: 1-epaule.STL  4-coude.STL  5-pince-avant-bras.STL  attache-pince.STL  avant-bras.STL  avant-bras.dae  base.STL  bras_haut.STL  bras_haut.dae  cou.STL  cou.dae  coude.STL  coude.dae  epaule.STL  epaule.dae  pince-avant-bras.STL  poignet_bas.STL  poignet_haut.STL  tete.STL  tete.dae  torse.STL  torse.dae  xtion.STL  xtion.dae
sara_description/urdf/: robotiq_c2_model.xacro  robotiq_c2_model_macro.xacro  sara.urdf  sara.urdf.xacro  sara_old.urdf.xacro
sara_face_recognition/: CMakeLists.txt  README.md  package.xml
sara_face_recognition/script/: ros2opencv2.py
sara_launch/: CMakeLists.txt  package.xml
sara_launch/amcl/: wm_amcl.launch
sara_launch/comm/: sara_comm.launch  sara_comm_test.launch
sara_launch/gmapping/: wm_slam_gmapping.launch  wm_slam_gmapping_with_imu.launch
sara_launch/gripper/: KeyboardController.launch  TcpNode.launch
sara_launch/leg_tracker/: wm_cob_leg_tracker.launch  wm_leg_detection.launch  wm_leg_tracker.launch
sara_launch/localization/: robot_localization.launch
sara_launch/mapping/: octomap_server.launch  octomap_server_nodelet.launch
sara_launch/nav/: gmap_dwa_nav.launch  rtab_dwa_nav.launch  rtab_eband_nav.launch  tr_nav.launch
sara_launch/navigation/: gmap_dwa_nav.launch  rtab_dwa_nav.launch  rtab_dwa_nav.launch~  rtab_eband_nav.launch  rtab_eband_nav.launch~  tr_nav.launch  tr_nav.launch~
sara_launch/openni2/: openni2.launch  wm_openni2.launch
sara_launch/people_launch/: wm_leg_detector.launch
sara_launch/remote/: remote_sara_description.launch
sara_launch/roboteq_driver/: wm_roboteq_driver.launch  wm_roboteq_driver.launch~
sara_launch/rtab/: rtab_sara.launch
sara_launch/safety/: arduino_safety_stop.launch
sara_launch/sim/: dwa_sim.launch  (+1 more)
sara_moveit/: .setup_assistant  CMakeLists.txt  package.xml
sara_vocab/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
wm_2dnav/: CMakeLists.txt  package.xml
wm_arm_msgs/: LICENSE.md  package.xml
wm_dynamic_tf/: CMakeLists.txt  CMakeLists.txt~  package.xml
wm_dynamixel_controller/: CMakeLists.txt  config.yaml  config.yaml~  package.xml
wm_facial_recognition/: CMakeLists.txt  package.xml  readme.md  readme.txt
wm_follow/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
wm_hand/: CMakeLists.txt  README.MD  README.md  package.xml
wm_hand/launch/: KeyboardController.launch  TcpNode.launch
wm_interpreter/: CMakeLists.txt  CMakeLists.txt~  package.xml
wm_leg_position_interpreter/: CMakeLists.txt  package.xml
wm_mecanum_cmd/: CMakeLists.txt  CMakeLists.txt~  package.xml
wm_mecanum_controller/: CMakeLists.txt  package.xml  wm_mecanum_controller_plugins.xml
wm_odometry_feedback/: CMakeLists.txt  CMakeLists.txt~  package.xml
wm_ork/object_recognition_ros_visualization/: CHANGELOG.rst  CMakeLists.txt  ork_rviz_plugin.xml  package.xml
wm_ork/object_recognition_ros_visualization/doc/source/: conf.py  index.rst
wm_ork/object_recognition_ros_visualization/src/: CMakeLists.txt
wm_ork/object_recognition_ros_visualization/src/rviz_plugin/: CMakeLists.txt  ork_object_display.cpp  ork_object_display.h  ork_object_visual.cpp  ork_table_display.cpp  ork_table_display.h  ork_table_visual.cpp  ork_table_visual.h
wm_ork/ork_renderer/src/: CMakeLists.txt  main.cpp  renderer2d.cpp  renderer3d.cpp  renderer3d.cpp~  renderer3d_impl_base.h  renderer3d_impl_glut.cpp  renderer3d_impl_glut.h  renderer3d_impl_osmesa.cpp  renderer3d_impl_osmesa.h  utils.cpp
wm_ork/ork_renderer/src/apps/: CMakeLists.txt  trainer_planar.cpp
wm_people_follower/: CMakeLists.txt  README.md  package.xml
wm_robocup2016/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
wm_smach/: CMakeLists.txt  package.xml
wm_static_tf/: CMakeLists.txt  package.xml
wm_supervisor/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
wm_supreme_planer/: CMakeLists.txt  CMakeLists.txt~  package.xml
wm_tensorflow/: CMakeLists.txt  package.xml
wm_tts/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+350 files in other folders)
