<package>
  <name>object_recognition_ros_visualization</name>
  <version>0.3.7</version>
  <description>object_recognition_ros_visualization contains rviz plugins to visualize ork detection results</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>wg-perception.github.io/object_recognition_ros</url>

  <build_depend>boost</build_depend>
  <build_depend>object_recognition_ros</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>object_recognition_ros</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rviz</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rviz plugin="${prefix}/ork_rviz_plugin.xml"/>
  </export>
</package>
